# corust-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
cli/: Cargo.toml
cli/src/: client.rs  connection.rs  error.rs  event.rs  main.rs  session.rs
cli/src/tui/: app.rs  markdown.rs  mod.rs  syntax.rs  ui.rs
corust_api/: Cargo.toml
corust_api/src/: conversation.rs  error.rs  lib.rs  protocol.rs
