[workspace]
members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Corust AI"]

[workspace.dependencies]
agent-client-protocol = { version = "0.10", features = ["unstable"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
unicode-width = "0.2"
