[package]
name = "corust"
description = "Corust CLI — an ACP client for the Corust agent."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "corust"
path = "src/main.rs"

[dependencies]
agent-client-protocol.workspace = true
async-trait.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
