[package]
name = "corust_api"
description = "Public API types and traits for Corust — the interface between CLI and core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
